Add border-radius on calculator-body and buttons, create margins for clear and backspace buttons

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ div {
     display: flex;
     flex-direction: column;
     background-color: rgb(233, 233, 233);
+    border-radius: 8px;
+}
+
+#clear,
+#backspace {
+    margin: 7px 20px;
 }
 
 button {
@@ -27,7 +33,10 @@ button {
     margin: 7px;
     background-color:rgb(239, 161, 255);
     font-size: 20px;
+    border-radius: 8px;
 }
+
+
 
 .footer {
     position: absolute;
