Add note about flex auto

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 .result {
     display: flex;
     flex: 1 1 auto;
+    /* flex auto tells the items to default to their given height, in this case, the given height is the hight of the display (90px) which is split evenly between the 2 items*/
 }
 
 #clear,
