--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ p {
 
 button {
     padding: 12px 25px;
-    
     margin: 7px;
     background-color:rgb(239, 161, 255);
     font-size: 23px;
@@ -87,6 +86,12 @@ button {
     background-color: rgb(197, 130, 209);
 }
 
+#subtract,
+#divide,
+#decimal {
+    font-weight: 600;
+}
+
 
 
 .footer {
@@ -96,6 +101,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 97%;
     padding: 10px;
 }
+
