--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+*{
+    color: white;
+}
+
 html {
     position: relative;
-    min-height: 100%
+    min-height: 100%;
 }
 
 body {
@@ -17,11 +21,11 @@ body {
 
 .calculator-body {
     margin-top: 80px;
-    border: 2px solid grey;
+    border: 2px solid rgb(63, 63, 63);
     padding: 5px;
     display: flex;
     flex-direction: column;
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(177, 179, 189);
     border-radius: 16px;
     align-items: stretch;
 }
@@ -32,7 +36,7 @@ body {
     /*min-height: 90px;*/
     margin: 9px;
     border-radius: 8px;
-    border: 2px solid grey;
+    border: 2px solid rgb(63, 63, 63);
     background-color: white;
 }
 
@@ -46,14 +50,19 @@ body {
 }
 
 p {
-    margin: 12px;
-    font-size: 25px;
+    margin: 8px 16px;
+    font-size: 32px;
+    color: black;
 }
 
 #clear,
 #backspace {
     margin: 9px 20px;
-    background-color: rgb(197, 130, 209);
+    background-color: rgb(228, 56, 56);
+}
+
+#backspace {
+    background-color: rgb(32, 70, 194);
 }
 
 .nums789-and-divide,
@@ -71,19 +80,24 @@ p {
     width: 3.1em;
 }
 
+#equals {
+    
+}
+
 button {
     padding: 12px 25px;
     margin: 7px;
-    background-color:rgb(239, 161, 255);
+    background-color:rgb(107, 107, 107);
     font-size: 23px;
     border-radius: 8px;
+    border: 2px solid rgb(63, 63, 63);
 }
 
 #add,
 #subtract,
 #multiply,
 #divide {
-    background-color: rgb(197, 130, 209);
+    background-color:rgb(28, 34, 68);
 }
 
 #subtract,
@@ -91,7 +105,6 @@ button {
 #decimal {
     font-weight: 600;
 }
-
 
 
 .footer {
