--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@ p {
 
 #clear,
 #backspace {
-    margin: 9px 20px;
+    margin: 9px 14px;
+    font-size: 20px;
     background-color: rgb(228, 56, 56);
 }
 
