--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-*{
-    color: white;
-}
-
 html {
     position: relative;
     min-height: 100%;
@@ -52,7 +48,6 @@ body {
 p {
     margin: 8px 16px;
     font-size: 32px;
-    color: black;
 }
 
 #clear,
@@ -84,10 +79,36 @@ p {
 button {
     padding: 12px 25px;
     margin: 7px;
-    background-color:rgb(107, 107, 107);
+    color: white;
+    background-color:rgb(102, 102, 102);
     font-size: 23px;
     border-radius: 8px;
     border: 2px solid rgb(63, 63, 63);
+    cursor: pointer;
+}
+
+.num:hover {
+    opacity: 0.8;
+}
+
+.operator:hover {
+    opacity: 0.8;
+}
+
+#equals:hover {
+    opacity: 0.8;
+}
+
+#decimal:hover {
+    opacity: 0.8;
+}
+
+#clear:hover {
+    background-color:  rgb(199, 13, 13);
+}
+
+#backspace:hover {
+    background-color: rgb(0, 36, 153);
 }
 
 #add,
