--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ button {
 }
 
 .num:hover {
-    opacity: 0.8;
+    background-color:rgb(77, 77, 77);
 }
 
 .operator:hover {
@@ -96,11 +96,11 @@ button {
 }
 
 #equals:hover {
-    opacity: 0.8;
+    background-color:rgb(77, 77, 77);
 }
 
 #decimal:hover {
-    opacity: 0.8;
+    background-color:rgb(77, 77, 77);
 }
 
 #clear:hover {
